add post resource
